--- a/UI/snowflakeUI/presto/static/presto/grid.css
+++ b/UI/snowflakeUI/presto/static/presto/grid.css
@@ -38,12 +38,20 @@ body {
     grid-column: col / span 2;
     grid-row: row 2;
     width: 400px;
-    height: 1000px;
+    height: 900px;
 }
 
 .d {
     grid-column: col 3 / span 2;
     grid-row: row 2;
     width: 800px;
-    height: 1000px;
+    height: 1200px;
+}
+
+
+.e {
+    grid-column: col / span 2;
+    grid-row: row 152;
+    width: 400px;
+    height: 300px;
 }
