minor changes in GUI

--- a/UI/snowflakeUI/presto/templates/presto/query.html
+++ b/UI/snowflakeUI/presto/templates/presto/query.html
@@ -16,12 +16,12 @@
 <div class="container">
     <div class="wrapper">
         <div class="box a">
-            <p>Find dataset：<input type="text" id="info" value=""></p>
+            <p>Find dataset：<input type="text" id="info" value="check"></p>
             <button id="AJAX_get" type="button">Search</button>
         </div>
         <div class="box b">
-            <p>Query：<input type="text" id="info_query" value=""></p>
-            <button id="AJAX_query" type="button">Submit</button>
+            <p><input type="text" id="info_query" value=""  style="width: 100%; height: 70%"></p>
+            <button id="AJAX_query" type="button">Query</button>
         </div>
         <div class="box c">
             <div class="row">
@@ -29,6 +29,10 @@
             </div>
         </div>
         <div class="box d"><p><table id="table"><tbody></tbody></table></p></div>
-        <div class="box e"><p><table id="table_e"><tbody></tbody></table></p></div>
+        <div class="box e">
+            <div class="row">
+                <p><ul class="mylist_e"></ul></p>
+            </div>
+        </div>
     </div>
 </div>
