--- a/UI/snowflakeUI/presto/static/presto/grid.css
+++ b/UI/snowflakeUI/presto/static/presto/grid.css
@@ -38,20 +38,23 @@ body {
     grid-column: col / span 2;
     grid-row: row 2;
     width: 400px;
-    height: 900px;
+    height: 400px;
+    overflow-y: scroll; 
 }
 
 .d {
     grid-column: col 3 / span 2;
     grid-row: row 2;
     width: 800px;
-    height: 1200px;
+    height: 600px;
+    overflow-y: scroll;
 }
 
 
 .e {
     grid-column: col / span 2;
-    grid-row: row 152;
+    grid-row: row 52;
     width: 400px;
-    height: 300px;
+    height: 196px;
+    overflow-y: scroll;
 }
