--- a/UI/snowflakeUI/presto/static/presto/grid.css
+++ b/UI/snowflakeUI/presto/static/presto/grid.css
@@ -6,7 +6,7 @@ body {
     display: grid;
     grid-gap: 5px;
     grid-template-columns: repeat(4, [col] 200px );
-    grid-template-rows: repeat(2, [row] 150px );
+    grid-template-rows: repeat(2, [row] 120px );
     background-color: #ffffff;
     border-color: #000000;
 }
@@ -21,40 +21,34 @@ body {
 }
 
 .a {
-    grid-column: col / span 2;
-    grid-row: row;
-    height: 150px;
-    width: 400px;
+    grid-column: 1 / 3;
+    grid-row: 1;
 }
 
 .b {
-    grid-column: col 3 / span 2;
-    grid-row: row;
-    width: 800px;
-    height: 150px;
-}
-
-.c {
-    grid-column: col / span 2;
-    grid-row: row 2;
-    width: 400px;
-    height: 400px;
-    overflow-y: scroll; 
-}
-
-.d {
-    grid-column: col 3 / span 2;
-    grid-row: row 2;
-    width: 800px;
-    height: 600px;
+    grid-column: 3 / 8;
+    grid-row: 1 / 6;
+    height: 340px;
     overflow-y: scroll;
 }
 
+.c {
+    grid-column: 1 / 3;
+    grid-row: 2 / 11;
+    height: 410px;
+    overflow-y: scroll;
+}
+
+.d {
+    grid-column: 3 / 8;
+    grid-row: 6 / 12;
+    height: 400px;
+    overflow-y: scroll;
+}
 
 .e {
-    grid-column: col / span 2;
-    grid-row: row 52;
-    width: 400px;
-    height: 196px;
+    grid-column: 1 / 3;
+    grid-row: 11;
+    height: 200px;
     overflow-y: scroll;
 }
