--- a/UI/snowflakeUI/presto/templates/presto/query.html
+++ b/UI/snowflakeUI/presto/templates/presto/query.html
@@ -20,7 +20,9 @@
             <button id="AJAX_get" type="button">Search</button>
         </div>
         <div class="box b">
-            <p><input type="text" id="info_query" value=""  style="width: 100%; height: 70%"></p>
+            <p>
+                <textarea type="text" id="info_query" cols="90" rows="10"></textarea>
+            </p>
             <button id="AJAX_query" type="button">Query</button>
         </div>
         <div class="box c">
@@ -28,7 +30,9 @@
                 <p><ul class="mylist"></ul></p>
             </div>
         </div>
-        <div class="box d"><p><table id="table"><tbody></tbody></table></p></div>
+        <div class="box d">
+            <p><table id="table"><tbody></tbody></table></p>
+        </div>
         <div class="box e">
             <div class="row">
                 <p><ul class="mylist_e"></ul></p>
