--- a/UI/snowflakeUI/presto/templates/presto/query.html
+++ b/UI/snowflakeUI/presto/templates/presto/query.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="{% static 'presto/presto.js' %}"></script>
 
 <div class="container">
+
     <div class="wrapper">
         <div class="box a">
             <p>Find dataset：<input type="text" id="info" value="check"></p>
@@ -38,5 +39,8 @@
                 <p><ul class="mylist_e"></ul></p>
             </div>
         </div>
+    </div>
+    <div style="float:right">
+        <a href="/presto/logout/"><button>Log out</button></a>
     </div>
 </div>
