Display presto error message in GUI

--- a/UI/snowflakeUI/presto/templates/registration/signup.html
+++ b/UI/snowflakeUI/presto/templates/registration/signup.html
@@ -7,4 +7,7 @@
     {{ form.as_p }}
     <button type="submit">Sign up</button>
 </form>
+<form action="../login">
+    <p>Already have an account? <button type="submit">Login</button></p>
+</form>
 {% endblock %}
